argocd/jsapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jsapp
  name: jsapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jsapp
  template:
    metadata:
      labels:
        app: jsapp
      annotations:
        # prometheus scrape config
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "3000"
    spec:
      containers:
      - image: devsareno/jsapp:0.1-arm64
        name: jsapp
        ports:
        - containerPort: 3000
