argocd/jsapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsapp
spec:
  selector:
    app: jsapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
