argocd/jsapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: jsapp.sareno.dev
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: jsapp
            port:
              number: 3000
  tls:
  - hosts:
    - jsapp.sareno.dev
    secretName: jsapp.sareno.dev
